build_error_worker_sync_3_utf8.log
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
.\gradlew.bat : C:\Use
rs\SSD\AndroidStudioPr
ojects\ASHASmartCare\a
pp\src\main\java\com\s
imats\ashasmartcare\ad
apters\SyncAdapter.jav
a:116: error: cannot 
find symbol
At line:1 char:1
+ .\gradlew.bat compil
eDebugJavaWithJavac > 
build_error_worker_syn
c_3.l ...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (C:\Users\S   
 SD\An...not find     
symbol:String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
            
ivStatusIcon = itemVie
w.findViewById(R.id.iv
StatusIcon);
                      
                      
         ^
  symbol:   variable 
ivStatusIcon
  location: class id
C:\Users\SSD\AndroidSt
udioProjects\ASHASmart
Care\app\src\main\java
\com\simats\ashasmartc
are\adapters\SyncAdapt
er.java:117: error: 
cannot find symbol
            
tvTableName = itemView
.findViewById(R.id.tvT
ableName);
                      
                      
        ^
  symbol:   variable 
tvTableName
  location: class id
C:\Users\SSD\AndroidSt
udioProjects\ASHASmart
Care\app\src\main\java
\com\simats\ashasmartc
are\adapters\SyncAdapt
er.java:118: error: 
cannot find symbol
            
tvRecordId = itemView.
findViewById(R.id.tvRe
cordId);
                      
                      
       ^
  symbol:   variable 
tvRecordId
  location: class id
C:\Users\SSD\AndroidSt
udioProjects\ASHASmart
Care\app\src\main\java
\com\simats\ashasmartc
are\adapters\SyncAdapt
er.java:120: error: 
cannot find symbol
            tvStatus 
= itemView.findViewByI
d(R.id.tvStatus);
                      
                      
     ^
  symbol:   variable 
tvStatus
  location: class id
C:\Users\SSD\AndroidSt
udioProjects\ASHASmart
Care\app\src\main\java
\com\simats\ashasmartc
are\adapters\SyncAdapt
er.java:121: error: 
cannot find symbol
            tvError = 
itemView.findViewById(
R.id.tvError);
                      
                      
    ^
  symbol:   variable 
tvError
  location: class id
Note: Some input 
files use or override 
a deprecated API.
Note: Recompile with 
-Xlint:deprecation 
for details.
5 errors

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/SSD/AndroidStudioProjects/ASHASmartCare/build/reports/problems/problems-report.html

FAILURE: Build failed 
with an exception.

* What went wrong:
Execution failed for 
task ':app:compileDebu
gJavaWithJavac'.
> Compilation failed; 
see the compiler 
output below.
  C:\Users\SSD\Android
StudioProjects\ASHASma
rtCare\app\src\main\ja
va\com\simats\ashasmar
tcare\adapters\SyncAda
pter.java:116: error: 
cannot find symbol
              
ivStatusIcon = itemVie
w.findViewById(R.id.iv
StatusIcon);
                      
                      
           ^
    symbol:   
variable ivStatusIcon
    location: class id
  C:\Users\SSD\Android
StudioProjects\ASHASma
rtCare\app\src\main\ja
va\com\simats\ashasmar
tcare\adapters\SyncAda
pter.java:117: error: 
cannot find symbol
              
tvTableName = itemView
.findViewById(R.id.tvT
ableName);
                      
                      
          ^
    symbol:   
variable tvTableName
    location: class id
  C:\Users\SSD\Android
StudioProjects\ASHASma
rtCare\app\src\main\ja
va\com\simats\ashasmar
tcare\adapters\SyncAda
pter.java:118: error: 
cannot find symbol
              
tvRecordId = itemView.
findViewById(R.id.tvRe
cordId);
                      
                      
         ^
    symbol:   
variable tvRecordId
    location: class id
  C:\Users\SSD\Android
StudioProjects\ASHASma
rtCare\app\src\main\ja
va\com\simats\ashasmar
tcare\adapters\SyncAda
pter.java:120: error: 
cannot find symbol
              
tvStatus = itemView.fi
ndViewById(R.id.tvStat
us);
                      
                      
       ^
    symbol:   
variable tvStatus
    location: class id
  C:\Users\SSD\Android
StudioProjects\ASHASma
rtCare\app\src\main\ja
va\com\simats\ashasmar
tcare\adapters\SyncAda
pter.java:121: error: 
cannot find symbol
              tvError 
= itemView.findViewByI
d(R.id.tvError);
                      
                      
      ^
    symbol:   
variable tvError
    location: class id
  Note: Some input 
files use or override 
a deprecated API.
  Note: Recompile 
with 
-Xlint:deprecation 
for details.
  5 errors

* Try:
> Check your code and 
dependencies to fix 
the compilation 
error(s)
> Run with --scan to 
get full insights.

BUILD FAILED in 5s
20 actionable tasks: 1 executed, 19 up-to-date
